# hello_pinocchino

./: README.md  pinocchino_env.yml
cpp/: CMakeLists.txt  main.cpp
ocp_cpp/: CMakeLists.txt  main_ad.cpp  main_bench.cpp  main_cg.cpp  main_ocp.cpp
ocp_cpp/model_dir/: converted_base.stl  converted_base_mount.stl  converted_cj_bot.stl  converted_cj_bot_vis.stl  converted_cj_cam_mount.stl  converted_cj_middle.stl  converted_cj_middle_vis.stl  converted_link_0.stl  converted_link_1.stl  converted_link_2.stl  converted_link_3.stl  converted_link_4.stl  converted_link_5.stl  converted_link_6.stl  converted_link_7.stl  robocrane.urdf  robocrane_simple.xml
ocp_cpp/rhtp/: OCP.cpp  OCP.h  RHMPC.cpp  RHMPC.h
python/: simulate.py
robot_model/: robocrane.xml
